# portal

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  LICENSE  README.md  cny_assets_chart.html  cny_chart_data.json  eslint.config.mjs  lighthouserc.json  next.config.ts  package-lock.json  package.json  playwright.config.real.ts  playwright.config.ts  playwright.manual.config.ts  r2_tickers.json  safe_net_data_inline.js  safe_net_pct.json  safe_net_pct_chart.html  screenshot-cashflow.mjs  tsconfig.json  vitest.config.ts
pipeline/: .env.example  config.example.json  pyproject.toml  requirements.txt
pipeline/.next/: trace  trace-build
pipeline/etl/: __init__.py  _category_totals.py  allocation.py  build.py  categories.py  changelog.py  config.py  db.py  dotenv_loader.py  email_report.py  incremental.py  k401.py  parsing.py  precompute.py  prices.py  projection.py  qianji.py  reconcile.py  refresh.py  replay.py  timemachine.py  types.py  validate.py
pipeline/etl/automation/: __init__.py  _constants.py  changes.py  notify.py  paths.py  receipt.py  runner.py
pipeline/etl/changelog/: __init__.py  categorize.py  render.py  snapshot.py
pipeline/etl/ingest/: empower_401k.py  fidelity_history.py  qianji_db.py  robinhood_history.py
pipeline/etl/market/: _series.py  _yfinance.py  fred.py  yahoo.py
pipeline/etl/migrations/: __init__.py  add_fidelity_action_kind.py  drop_fidelity_dead_columns.py  drop_qianji_account.py  drop_qianji_source_id.py  drop_robinhood_unique.py
pipeline/etl/prices/: __init__.py  fetch.py  store.py  validate.py
pipeline/etl/qianji/: __init__.py  (+4 more)
pipeline/generate_asset_snapshot/: __init__.py  __main__.py  allocation.py  analysis.py  config.py  db.py  history.py  parsing.py  portfolio.py  precompute.py  prices.py  report.py  server.py  timemachine.py  types.py  validate.py
pipeline/scripts/: _regression_util.py  _verify_projection.py  _wrangler.py  backup_d1.py  build_timemachine_db.py  create_test_db.py  gen_schema_sql.py  inspect_qianji.py  install_launchd.sh  install_task.ps1  one_shot_fix_qianji_prod_2026_04_18.py  project_networth_nightly.py  r2_artifacts.py  refresh_l1_baseline_from_fixtures.py  regression.sh  regression_baseline.sh  run.sh  run_automation.py  run_portal_sync.ps1  seed_local_d1_from_fixtures.sh  seed_local_r2_from_fixtures.sh  send_report.py  sync.py  sync_policy.py  sync_prices_nightly.py  sync_to_d1.py  verify_positions.py  verify_qianji.py  verify_vs_prod.py
pipeline/tests/: conftest.py  fixtures.py
pipeline/tools/: gen_zod.py
(+412 files in other folders)
