[project]
name = "asset-snapshot"
version = "0.1.0"
requires-python = ">=3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = ["tests/", "data/", "\\.venv/"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM"]
ignore = [
    "E501",   # line length handled by formatter
    "A001",   # shadowing builtins (we use 'type' in configs)
    "A002",   # same
    "N802",   # function name lowercase (test methods)
    "UP007",  # X | Y union syntax (keep Optional for clarity)
    "SIM108", # ternary (sometimes if/else is clearer)
]

[tool.ruff.lint.isort]
known-first-party = ["generate_asset_snapshot"]
