[project]
name = "asset-snapshot"
version = "0.1.0"
requires-python = ">=3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "scripts"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["etl"]
branch = false
omit = [
    "tests/*",
    "etl/__init__.py",
    "etl/market/__init__.py",
    "etl/migrations/__init__.py",
]

[tool.coverage.report]
# Threshold intentionally set well below current ~94% — a floor to catch
# regressions (e.g., large swaths of etl/ going untested), not a ratchet.
# Raise only after we've lived with coverage reporting for a few weeks and
# know what churn looks like on real PRs.
fail_under = 75
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = ["tests/", "data/", "\\.venv/"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM"]
ignore = [
    "E501",   # line length handled by formatter
    "A001",   # shadowing builtins (we use 'type' in configs)
    "A002",   # same
    "N802",   # function name lowercase (test methods)
    "UP007",  # X | Y union syntax (keep Optional for clarity)
    "SIM108", # ternary (sometimes if/else is clearer)
]

[tool.ruff.lint.isort]
known-first-party = ["etl"]
